--- a/src/app/styles/_reviews.scss
+++ b/src/app/styles/_reviews.scss
@@ -66,7 +66,7 @@
         max-width: 90%;
     }
 
-    .scroll-button {
-        display: none;
-    }
+    // .scroll-button {
+    //     display: none;
+    // }
 }
