--- a/src/app/styles/_hero.scss
+++ b/src/app/styles/_hero.scss
@@ -7,7 +7,6 @@
     padding: 50px;
     background-color: $secondary-background;
     color: $secondary-text-color;
-
     .hero-text {
         max-width: 50%;
     }
@@ -51,16 +50,16 @@
     }
 
     .hero-image {
-        max-width: 40%;
         background-color: inherit;
         display: flex;
         justify-content: center;
         align-items: center;
         border-radius: 50%;
         position: relative;
+        width: 100%;
 
         .cook-image {
-            max-width: 100%;
+            width: 70%;
             height: auto;
             border-radius: 34%;
         }
@@ -81,6 +80,13 @@
             margin-bottom: 20px;
         }
     }
+
+    @media (min-width: 1024px) {
+        .hero-image {
+            display: flex;
+            justify-content: flex-end;
+        }
+      }
 }
 
 @keyframes smoke-animation {
