--- a/src/app/styles/_menu.scss
+++ b/src/app/styles/_menu.scss
@@ -78,13 +78,11 @@
 .scroll-button {
     position: absolute;
     top: 50%;
-    transform: translateY(-50%);
     background-color: $secondary-background;
-    border: none;
     color: $primary-background;
-    padding: 10px;
+    padding: 7px;
+    border-radius: 50%;
     cursor: pointer;
-    font-size: 2em;
     z-index: 1;
 }
 
