fix(image): added image and cart icon

--- a/src/app/styles/_features.scss
+++ b/src/app/styles/_features.scss
@@ -40,8 +40,8 @@
 }
 
 .features-image .img {
-    width: 100%;
-    height: auto;
+    max-width: 500px;
+    max-height: 500px;
 }
 
 @media (max-width: 1024px) {
