--- a/src/app/styles/_navbar.scss
+++ b/src/app/styles/_navbar.scss
@@ -57,4 +57,36 @@
         display: flex;
         justify-self: unset;
     }
+
+    .cart-icon-container {
+        position: relative;
+        cursor: pointer;
+    
+        svg {
+          color: $button-background; // Adjust the color as needed
+        }
+    
+        .cart-items-count {
+          position: relative;
+          right: 10px;
+          top:-10px;
+          background: $button-hover;;
+          color: white;
+          border-radius: 50%;
+          padding: 2px 6px;
+          font-size: 12px;
+          height: 20px;
+        }
+    
+        &.expanded {
+          display: flex;
+          justify-content: center;
+          margin: 1rem auto; // Center inside expanded navbar
+        }
+    
+        @media (min-width: 992px) {
+          margin-left: auto; // Keep it on the right for larger screens
+        }
+      }
+ 
 }
