--- a/src/app/styles/_checkout.scss
+++ b/src/app/styles/_checkout.scss
@@ -1,5 +1,7 @@
+@import 'variables';
+
 /* Basic styles for the checkout form */
-.checkout-container {
+.payment-container {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -7,7 +9,7 @@
   background-color: #f9f9f9;
 }
 
-.checkout-form {
+.payment-form {
   background: #fff;
   padding: 20px;
   border-radius: 8px;
@@ -16,15 +18,16 @@
   max-width: 500px;
 }
 
-.checkout-form h2 {
+.payment-form h2 {
   margin-bottom: 20px;
   font-size: 24px;
   color: #333;
 }
 
-.checkout-form button {
-  background-color: #6772e5;
-  color: #fff;
+.payment-form button {
+  margin-top:20px;
+  background-color: $secondary-background;
+  color: $primary-background;
   padding: 10px;
   border: none;
   border-radius: 4px;
@@ -33,6 +36,6 @@
   font-size: 16px;
 }
 
-.checkout-form button:hover {
-  background-color: #5469d4;
+.payment-form button:hover {
+  background-color: $button-hover;
 }
